# IntraSend

./: .gitignore  CMakeLists.txt  README.md  images.qrc  main.cpp  mainwindow.cpp  mainwindow.ui
PeachDemo/: PeachDemo.pro  widget.cpp
PyIntraSend/: form.ui  pyproject.toml  widget.py
docs/: IntraSend需求与概要设计文档.docx
src/: main.cpp
src/core/data/: password_manager.cpp  password_manager.h  security_manager.cpp  security_manager.h
src/core/filetransfer/: file_transfer_manager.cpp  file_transfer_manager.h  file_transfer_request.cpp  file_transfer_request.h  file_transfer_response.cpp  file_transfer_response.h  file_transfer_session.cpp  file_transfer_session.h
src/core/message/: message.cpp  message.h  message_manager.cpp  message_manager.h
src/core/network/: Client.h  Server.h  client.cpp  client.h  message_protocol.cpp  message_protocol.h  server.cpp  user_discovery.cpp  user_discovery.h
src/core/user/: contact_manager.cpp  contact_manager.h  userIdentity.cpp  userIdentity.h  user_status.cpp  user_status.h
src/core/utils/: constants.h  enums.h
src/new_ui/: IntroductionCard.h  appinit.cpp  file_transfer_dialog.cpp  file_transfer_dialog.h  file_transfer_dialog.ui  home.cpp  home.h  home.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings_dialog.cpp  settings_dialog.h  settings_dialog.ui  user_radar_dialog.cpp  user_radar_dialog.h  user_radar_dialog.ui  widget.ui
src/ui/: mymessagebox.cpp  mymessagebox.ui  widget.ui
